tdf#156548: make truncated long bookmark name unique, and use it in hyperlinks

Change-Id: I156359339ff8be85fe90cb6612eafdc6030c851f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155092
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155129
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>