sw/source/filter/ww8/docxattributeoutput.hxx
@@ -753,7 +753,7 @@ protected:
 
 private:
 
-    void DoWriteBookmarkTagStart(std::u16string_view bookmarkName);
+    void DoWriteBookmarkTagStart(const OUString& bookmarkName);
     void DoWriteBookmarkTagEnd(sal_Int32 nId);
     void DoWriteMoveRangeTagStart(const OString & bookmarkName,
             bool bFrom, const SwRedlineData* pRedlineData);
